--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
-    <title>Jenkins Developers</title>
+    <title>Where in the world is Jenkins?</title>
     <style>
       html, body {
         height: 100%;
@@ -16,19 +16,51 @@
     </style>
   </head>
   <body>
-    <h1>Jenkins Developers</h1>
+    <h1>Where in the world is Jenkins?</h1>
+    <p>
+      <button onclick="toggleDevs()">Toggle Developers</button>
+      <button onclick="toggleUsers()">Toggle Users</button>
+      <button onclick="toggleEvents()">Toggle Events</button>
+    </p>
     <div id="map"></div>
     <script>
 
+var map;
+var devsMap;
+var usersMap;
+var eventsMap;
+
 function initMap() {
-  var map = new google.maps.Map(document.getElementById('map'), {
+  map = new google.maps.Map(document.getElementById('map'), {
     zoom: 1
   });
 
-  var ctaLayer = new google.maps.KmlLayer({
-    url: 'https://raw.githubusercontent.com/jenkinsci/keyhole/master/developers.kml',
+  devsMap = new google.maps.KmlLayer({
+    url: 'https://raw.githubusercontent.com/daniel-beck/keyhole/multimap/developers.kml',
     map: map
   });
+
+  usersMap = new google.maps.KmlLayer({
+    url: 'https://raw.githubusercontent.com/daniel-beck/keyhole/multimap/users.kml',
+    map: map
+  });
+
+  eventsMap = new google.maps.KmlLayer({
+    url: 'https://raw.githubusercontent.com/daniel-beck/keyhole/multimap/events.kml',
+    map: map
+  });
+}
+
+function toggleDevs() {
+  if (devsMap.getMap()) devsMap.setMap(null); else devsMap.setMap(map);
+}
+
+function toggleUsers() {
+  if (usersMap.getMap()) usersMap.setMap(null); else usersMap.setMap(map);
+}
+
+function toggleEvents() {
+  if (eventsMap.getMap()) eventsMap.setMap(null); else eventsMap.setMap(map);
 }
 
     </script>
